<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/game_background"
    tools:context=".TwoPointActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textview_gametitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/yellow"/>
    </LinearLayout>
    <com.linedraw.drawline.view.GraphView
        android:id="@+id/graphview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_point1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:background="@color/blue"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/textview_point2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:background="@color/yellow"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_linedraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:background="@color/red"
                android:textSize="20sp"
                android:text="@string/line_draw"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:textSize="20sp"
                    android:text="@string/equation_yequals"/>
                <TextView
                    android:id="@+id/textview_slope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="@color/red"
                    android:textSize="20sp"
                    android:text="@string/equation_m"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@color/transparent"
                    android:textSize="20sp"
                    android:text="@string/equation_xplus"/>
                <TextView
                    android:id="@+id/textview_yintercept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="@color/red"
                    android:textSize="20sp"
                    android:text="@string/equation_b"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
